--- a/_posts/2021-06-16-gandhi.md
+++ b/_posts/2021-06-16-gandhi.md
@@ -8,7 +8,10 @@ tags:
   - Gandhi
 ---
 
-<img src="{{ site.url }}{{ site.baseurl }}/assets/images2/gandhi.png" alt="Portrait of Mahatma Gandhi by Indrajit Das. ">
+
+<figure >
+    <a href="/assets/images2/gandhi.png"><img src="/assets/images2/gandhi.png" alt="Portrait of Gandhi by Indrajit Das"></a>
+</figure>
 
 ## Takeaways
 
@@ -56,4 +59,4 @@ Gandhi's case study shows how having a self-critical mindset with the intent of 
 
 Interestingly enough, until Gandhi ultimately came to India in his min 40's he did not seriously consider freedom of Indian under the British rule as a motivating factor. He was just extremely aware of the injustices around him, and did his best to fix them. This mental attitude alone led him to solve societies big problems of the time. In fact, when he returned to India in 1900, with the intent to settle down in Mumbai and practice at the bar, he was immediately summoned back to South Africa to meet the Prime Minister of U.K., Mr. Chamberlain. Throughout his life, Gandhi accepted calls from people who needed his support, and also ultimately when his whole country needed him.
 
-As a physicist, I draw parallels with the emergence of large scale macroscopic properties from microscopic interactions. A crystal is composed of individual atoms that don't know how to place themselves, yet a beautiful structure emerges. How is this possible? This is due to the microscopic interactions between individual molecules, leading to emergent patterns. The same goes for my professional activities - I strive to make the best choice in the moment, without explicitly knowing what results these decisions might make in the larger picture. But with the hope that decades later, a story that made a difference will emerge. 
+As a physicist, I draw parallels with the emergence of large scale macroscopic properties from microscopic interactions. A crystal is composed of individual atoms that don't know how to place themselves, yet a beautiful structure emerges. How is this possible? This is due to the microscopic interactions between individual molecules, leading to emergent patterns. The same goes for my professional activities - I strive to make the best choice in the moment, without explicitly knowing what results these decisions might make in the larger picture. But with the hope that decades later, a story that made a difference will emerge.
