Rich Dad/Poor Dad

--- a/_posts/2021-06-16-gandhi.md
+++ b/_posts/2021-06-16-gandhi.md
@@ -4,18 +4,14 @@ date: 2021-06-16
 categories:
   - blog
 tags:
-  - Review
-  - Gandhi
+  - Books
 ---
 
 
+Reading Gandhi's autobiography last year opened up my eyes to the importance of mental discipline and training, which is not often as discussed as physical training. But I would argue that mental training is as important (if not more) than physical training. The difference is that when you train your body, you see improvements when you look at yourself in the mirror. This positive feedback gives you motivation to continue exercising as part of a weekly regimen. In most cases, the mirror is a true physical reflection of your physical self. However, there is no such reflection of an improving mental prowess. Nevertheless, it is extremely important to train the mind. Think about your daily life - how many times do you need to do heavy physical labor like farm work? As compared to how much time do you spend using your brain to solve complex problems - sitting at your computer, or discussing with co-workers, or teaching someone else?
 <figure >
     <a href="/assets/images2/gandhi.png"><img src="/assets/images2/gandhi.png" alt="Portrait of Gandhi by Indrajit Das"></a>
 </figure>
-
-## Takeaways
-
-Reading this book last year opened up my eyes to the importance of mental discipline and training, which is not often as discussed as physical training. But I would argue that mental training is as important (if not more) than physical training. The difference is that when you train your body, you see improvements when you look at yourself in the mirror. This positive feedback gives you motivation to continue exercising as part of a weekly regimen. In most cases, the mirror is a true physical reflection of your physical self. However, there is no such reflection of an improving mental prowess. Nevertheless, it is extremely important to train the mind. Think about your daily life - how many times do you need to do heavy physical labor like farm work? As compared to how much time do you spend using your brain to solve complex problems - sitting at your computer, or discussing with co-workers, or teaching someone else?
 
 Gandhi summarizes his life's work as a never ending search for truth. In the final farewell chapter, he summarizes what he has learnt through years of perseverence:
 
