--- a/_posts/2021-07-08-rich-poor.md
+++ b/_posts/2021-07-08-rich-poor.md
@@ -12,7 +12,7 @@ rather than running after money. Kiyosaki's birth father was an intellectual man
 decisions. The rich dad was Kiyosaki's friend's dad, who taught him lessons in financial literacy and financial freedom, through allowing Kiyosaki
 to follow in his footsteps.
 
-Through the book, Kiyosaki illustrates the financial lessons he learned by working for his friend's father. One such lesson is that the rich don'e work for money.
+Through the book, Kiyosaki illustrates the financial lessons he learned by working for his friend's father. One such lesson is that the rich don't work for money.
 To me this statement makes sense as Kiyosaki explains it - the middle class is caught in a never ending trap of making stable but low wages. As a result,
 many hardworking folks have to work extremely hard to make ends meet, sometimes working multiple jobs. This in combination with a lack of accounting for
 financial conditions and a tendency to waste money on non-essential items leads to a cycle of wealth loss and poverty. However, one thing he says about "rich"
