added img to rich poor dad post

--- a/_posts/2021-07-08-rich-poor.md
+++ b/_posts/2021-07-08-rich-poor.md
@@ -12,6 +12,11 @@ rather than running after money. Kiyosaki's birth father was an intellectual man
 decisions. The rich dad was Kiyosaki's friend's dad, who taught him lessons in financial literacy and financial freedom, through allowing Kiyosaki
 to follow in his footsteps.
 
+<figure >
+    <a href="/assets/images2/richpoor.jpg"><img src="/assets/images2/richpoor.jpg" alt="Book cover by Skanda Vivek"></a>
+</figure>
+
+
 Through the book, Kiyosaki illustrates the financial lessons he learned by working for his friend's father. One such lesson is that the rich don't work for money.
 To me this statement makes sense as Kiyosaki explains it - the middle class is caught in a never ending trap of making stable but low wages. As a result,
 many hardworking folks have to work extremely hard to make ends meet, sometimes working multiple jobs. This in combination with a lack of accounting for
@@ -23,7 +28,7 @@ have anything to do with money. He said:
 your emotions, but you have got to do the thinking."
 
 I think this is a profound statement, that does not have to do only with making money. But also leading a rich, fulfilling life not necessarily associated
-with a dollar amount. Mastering the mind is a crucial step it seems, to being financially succesful. If you read my post on Gandhi, you will see that the lessons
+with a dollar amount. Mastering the mind is a crucial step it seems, to being financially succesful. If you read my [post on Gandhi](https://skandavivek.com/blog/gandhi/), you will see that the lessons
 he writes about ("To attain [perfection], one has to become absolutely passion-free in thought, speech and action; to rise above the opposing currents of love and hatred, attachment and repulsion")
 resonates with Kiyosaki's ideas too. If you had told me 2 years ago that Gandhi's book and a financial best seller
 have the same underlying theme, I would have never believed you!
@@ -50,7 +55,7 @@ You might meet all sorts of people with all sorts of ideas, have serendipitous c
 You might never know all the possible value for your approach, and you might be useful. It's not possible to imagine all the future possibilities and opportunities
 that could result from just putting your work out there. I say this from first hand experience. Multiple times. Even though I'm not super popular. If I can do it, so can you.
 
-Based on a suggestion by the incredible Youtuber Ali Abdaaal, I'm going to summarize 3 key points I learnt from this book as well as 3 quotes that stood out:
+Based on a suggestion by the incredible Youtuber [Ali Abdaaal](https://www.youtube.com/watch?v=AjoxkxM_I5g), I'm going to summarize 3 key points I learnt from this book as well as 3 quotes that stood out:
 
 
 # 3 Takeaways:
