--- a/_posts/2021-07-08-rich-poor.md
+++ b/_posts/2021-07-08-rich-poor.md
@@ -48,7 +48,7 @@ of course talks about how to shield from taxes by forming the right sort of comp
 trapped in the rat race.
 
 The final section of his book is titled "Teach and you shall receive." This particularly resonates with me, as I like teaching in various formats. And recently with the online
-education explosion, I have much truth to this statement - from students who enjoy my online resources to those who read my blogs and research articles and for lifelong
+education explosion, I have found much truth to this statement - from students who enjoy my online resources to those who read my blogs and research articles and for lifelong
 collaborations. Youtuber David Perrel (according to another youtuber Ali Abdaal) makes a wonderful statement about online writing. He says think about if you live in a small
 village and don't go out too much - your contacts, interactions, and ideas are limited to those from within the village. But what if you take a trip every week to a far away place?
 You might meet all sorts of people with all sorts of ideas, have serendipitous connections and broaden your mind. So go forth and put your work out there.
@@ -67,7 +67,7 @@ Based on a suggestion by the incredible Youtuber [Ali Abdaaal](https://www.youtu
 
 # 3 Quotes:
 1. "Be an observer, not a reactor to your emotions. Most people do not know that it is their emotions that are doing the thinking. Your emotions are
-your emotions, but you have got to do the thinking.""
+your emotions, but you have got to do the thinking."
 2. "Work to learn - don't work for money"
 3. "Each dollar in my asset column was a great employee, working hard to make more employees and buy the boss a new Porsche."
 
